# rstcheck-core

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .rstcheck.project.cfg  AUTHORS.rst  CHANGELOG.md  Pipfile  README.rst  prep_release.py  pyproject.toml  spelling_dict.txt  tox.ini
.github/ISSUE_TEMPLATE/: bug-report-lib.yaml  bug-report-tool.yaml  feature-request.yaml  question.yaml
.github/workflows/: codeql-analysis.yml  documentation.yaml  documentation.yml  qa.yaml  qa.yml  test.yaml  test.yml  update-authors.yaml  update-authors.yml
docs/source/: _badges.rst  api.rst  conf.py  faq.rst  index.rst  installation.rst  migrations.rst  objects.pydantic.inv  spelling_dict.txt
docs/source/autoapidoc/: rstcheck_core.rst
docs/source/usage/: config.rst  index.rst  library.rst
docs/source/workflows/: development.rst  index.rst
src/rstcheck_core/: __init__.py  _compat.py  _docutils.py  _extras.py  _sphinx.py  _sphinx_workarounds.py  checker.py  config.py  inline_config.py  runner.py  types.py
testing/examples/good/: _include.rst  code_blocks.rst
testing/examples/sphinx/: add_directive_test.rst  unknown_directive_test.rst
tests/: _docutils_test.py  _extras_test.py  _sphinx_test.py  _sphinx_workarounds_test.py  checker_test.py  config_test.py  conftest.py  inline_config_test.py  runner_test.py  test__docutils.py  test__extras.py  test__sphinx.py  test_checker.py  test_config.py  test_inline_config.py  test_runner.py  test_types.py  types_test.py
tests/integration_tests/: conftest.py  file_checker_test.py  runner_test.py  test_file_checker.py  test_runner.py
